--- a/src/main/resources/assets/metal_detector/lang/en_us.json
+++ b/src/main/resources/assets/metal_detector/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.metal_detector.osc_crystal": "Oscillating Crystal",
-  "item.metal_detector.metal_detector": "Metal Detector"
+  "item.metal_detector.metal_detector": "Metal Detector",
+  "block.metal_detector.crystal_ore": "Oscillating Crysal Ore"
 }
